<resources>
    <string name="app_name">MyFinance (Privacy Friendly)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>


    <string name="menu_transaction">Transaction</string>
    <string name="menu_accounts">Accounts</string>
    <string name="menu_categories">Categories</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="editTextTransactionCategory">Transaction Category</string>
    <string name="save_transaction">Save Transaction</string>


    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>