<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_baseline_transaction_24"
            android:title="@string/menu_transaction" />
        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_baseline_account_balance_24"
            android:title="@string/menu_accounts" />
        <item
            android:id="@+id/nav_Categories"
            android:icon="@drawable/ic_baseline_categories_24"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_gallery" />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_baseline_settings_24"
            android:title="@string/menu_settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_baseline_about_24"
            android:title="@string/menu_about" />

    </group>



</menu>